--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 				overflow: hidden;
 				background-color: #000;
 				color: #fff;
-				cursor: pointer;
+				cursor: grab;
 				user-select: none;
 				text-align: center;
 				font-family: Arial;
 				font-size: 14px
 			}
-			body:active {cursor: grab}
+			body:active {cursor: grabbing}
 
 			/* Barrel element */
 			.threedee {
