--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			.threedee {
 				top: 50%;
 				left: 50%;
+				overflow: hidden;
 				position: absolute;
 				-webkit-backface-visibility: visible;
 				backface-visibility: visible;
