--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel="stylesheet" href="assets/css/main.css">
 		<script src="assets/js/main.js" defer></script>
-		<title>3D Barrel</title>
+		<title>3D Oil Drum</title>
 	</head>
 
 	<body>
