--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
-<!-- See also https://keithclark.co.uk/labs/css-fps -->
+<!-- See also the original by Keith Clark https://keithclark.co.uk/labs/css-fps -->
 
 <!DOCTYPE html>
 
-<html lang="en">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="A 3D interactive Half Life 2 oil drum made with vanilla CSS.">
-		<meta name="keywords" content="3d, barrel, oil, drum, gmod, animation, interactive, css, javascript, vanilla, mattéo, legagneux">
-		<meta name="author" content="Keith Clark, Mattéo Legagneux">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<link rel="icon" href="favicon.ico">
 		<link rel="stylesheet" href="assets/css/main.css">
 		<script src="assets/js/main.js" defer></script>
-		<title>3D Oil Drum</title>
+		<title>3D Interactive Oil Drum</title>
 	</head>
 
 	<body>
 		<!-- Texture option -->
-		<div class="texture-option" title="Click to change texture">
-			<button id="texture">Applied texture: <span></span></button>
-		</div>
+		<button id="texture">Applied texture: <span></span></button><br>
 
 		<!-- Wireframe option -->
 		<label for="wireframe">Toggle wireframe</label>
