--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicon.ico">
 		<link rel="stylesheet" href="assets/css/main.css">
 		<script src="assets/js/main.js" defer></script>
-		<title>3D Interactive Oil Drum</title>
+		<title>3D Half-Life 2 Oil Drum</title>
 	</head>
 
 	<body>
